<resources>
    <string name="app_name">Geobells Free</string>
    <string name="action_create">Create a reminder</string>
    <string name="action_done">Create reminder</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="button_address_map">View/Pick from map</string>
    <string name="button_address_search">Search</string>
    <string name="button_advanced_options">Advanced…</string>
    <string name="button_business_view_places">View places</string>
    <string name="button_choose_days">Choose days…</string>
    <string name="checkbox_reminder_airplane">Toggle airplane mode upon reminder</string>
    <string name="checkbox_reminder_repeat">Repeat</string>
    <string name="checkbox_reminder_silence">Silence phone upon reminder</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_search">Search</string>
    <string name="dialog_message_search_no_results">No results found.</string>
    <string name="dialog_message_view_no_results">No results found.</string>
    <string name="dialog_title_address_search">Search for address</string>
    <string name="dialog_title_results">Results</string>
    <string name="dialog_title_search_no_results">Search for address</string>
    <string name="dialog_title_view_no_results">View places</string>
    <string name="dialog_title_view_places">View places</string>
    <string name="hint_reminder_address">e.g. \"1020 Main Street\"</string>
    <string name="hint_reminder_business">e.g. \"Grocery store\" or \"Costco\"</string>
    <string name="hint_reminder_title">e.g. \"Get Milk\" or \"Pick up Groceries\"</string>
    <string name="message_creating">Creating reminder…</string>
    <string name="message_searching">Searching…</string>
    <string name="message_viewing">Loading places…</string>
    <string name="navigation_about_title">About</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_help_title">Help</string>
    <string name="navigation_settings_title">Settings</string>
    <string name="preference_category_notifications">Notifications</string>
    <string name="preference_category_other">Other</string>
    <string name="preference_category_saveddata">Saved Data</string>
    <string name="preference_clear_autocomplete">Clear autocomplete data</string>
    <string name="preference_clear_reminders">Clear all reminders</string>
    <string name="preference_metric">Use metric units</string>
    <string name="preference_notification_sound">Choose notification sound</string>
    <string name="preference_notification_summary">Show notification when Geobells can remind you. It\'s recommended to leave this on. Setting takes effect the next time you create or edit a reminder</string>
    <string name="preference_notification">Show notification</string>
    <string name="preference_popup_summary">Show a screen popup with notification</string>
    <string name="preference_popup">Enable popup reminders</string>
    <string name="preference_voice_summary">Read reminder details out loud in addition to sending a notification</string>
    <string name="preference_voice">Enable voice reminders</string>
    <string name="preferencescreen_advanced">Advanced</string>
    <string name="prompt_reminder_address">Address of the place</string>
    <string name="prompt_reminder_business">Type of Place</string>
    <string name="prompt_reminder_days">Remind only on these days</string>
    <string name="prompt_reminder_proximity">Trigger when closer than</string>
    <string name="prompt_reminder_title">Reminder Title</string>
    <string name="prompt_reminder_transition">Remind When</string>
    <string name="prompt_reminder_type">Remind at</string>
    <string name="reminder_transition_enter">Entering (getting near) the place</string>
    <string name="reminder_transition_exit">Exiting (getting far away from) the place</string>
    <string name="reminder_type_dynamic">A type of place</string>
    <string name="reminder_type_specific">One specific place</string>
    <string name="text_date_default">Created 7 hours ago</string>
    <string name="text_location_default">At 1102 Main Street</string>
    <string name="text_title_default">Get Milk</string>
    <string name="title_activity_create_reminder">Create Reminder</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_complete">Completed</string>
    <string name="title_ringtone_dialog">Choose notification sound</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="toast_fill_business">Enter a type of place to view places that Geobells will remind you at.</string>
    <string name="toast_fill_info">Please fill all info.</string>
    <string name="toast_no_geocode_results">No location found for address. Make sure the address entered is correct.</string>
    <string name="toast_reminder_created">Reminder created.</string>
    <string name="toast_reminder_swipe_completed">Reminder set as completed.</string>
    <string name="toast_reminder_swipe_uncompleted">Reminder set as upcoming.</string>
    <string name="title_activity_view_edit_reminder">ViewEditReminderActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_pick_map">View or Pick from Map</string>
    <string name="text_no_reminders">No reminders.</string>
    <string name="button_create_a_reminder">Create a reminder</string>
    <string name="action_view_map">View on map</string>
    <string name="title_activity_view_reminders_map">Reminders on Map</string>
    <string name="checkbox_map_key_default">Get Milk</string>
    <string name="prompt_reminder_description">Reminder description</string>
    <string name="hint_reminder_description">Enter a description (optional)</string>
    <string name="text_no_completed_reminders">When a reminder has completed, it will appear here.</string>
    <string name="toast_no_map_geocode_results_begin">Couldn\'t find</string>
    <string name="toast_no_map_geocode_results_end">on the map.</string>
    <string name="message_loading_map">Loading map…</string>
    <string name="marker_title_taptopick">Tap to pick:</string>
    <string name="hint_reminder_address_search">enter a search term here</string>
    <string name="toast_reminders_cleared">All reminders deleted.</string>
    <string name="dialog_message_clear_all_reminders">All reminders will be deleted.</string>
    <string name="dialog_title_clear_all_reminders">Clear all reminders</string>
    <string name="service_location">Geofence</string>
    <string name="service_activityrecognition">ActivityRecognition</string>
    <string name="service_speak">Voice</string>
    <string name="service_activityhandler">ActivityHandler</string>
    <string name="title_activity_popup">PopupActivity</string>
    <string name="notification_listening_message">You\'ll be reminded where you specified.</string>
    <string name="notification_listening_title">Geobells is listening</string>
    <string name="notification_action_navigate">Directions</string>
    <string name="notification_message_approaching">Approaching</string>
    <string name="notification_message_dontforget">don\'t forget to</string>
    <string name="notification_message_exiting">Leaving</string>
    <string name="dialog_title_about">About</string>
    <string name="toast_no_map_reminders">No reminders to show on map.</string>
    <string name="toast_connect_internet_map">Connect to the internet to view the map.</string>
    <string name="toast_connect_internet_create_reminder">Connect to the internet to create a reminder.</string>
    <string name="title_activity_view_reminder">View Reminder</string>
    <string name="text_description_default">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent venenatis odio massa, volutpat ornare dui pretium eleifend. Quisque ac varius mi, quis eleifend nibh. Sed in lorem dictum lorem bibendum ultrices. Suspendisse viverra lorem enim, at congue lectus imperdiet eu. Aenean mauris dui, feugiat at nulla nec, tempor iaculis erat. In porttitor, mi eget consequat mattis, lacus felis pretium urna, a pharetra orci tellus vel risus</string>
    <string name="text_proximity_default"><![CDATA[When closer than &#189; mi.]]></string>
    <string name="text_days_default">Reminds on Monday, Tuesday, Friday</string>
    <string name="text_repeat_default">Resets every day</string>
    <string name="text_toggle_default">Toggles airplane mode and silences phone upon reminder</string>
    <string name="toast_error_occurred">An error occurred.</string>
    <string name="toast_connect_internet_search">Couldn\'t initiate search. Make sure you\'re still connected to the internet.</string>
    <string name="text_when_closer_than">When closer than&#160;</string>
    <string name="text_when_farther_than">When farther than&#160;</string>
    <string name="text_reminds_on">Reminds on&#160;</string>
    <string name="text_repeats">Resets every day</string>
    <string name="text_silence_and_airplane">Silences phone and toggles airplane mode upon reminder</string>
    <string name="text_silence">Silences phone upon reminder</string>
    <string name="text_airplane">Toggles airplane mode upon reminder</string>
    <string name="action_edit">Edit reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="action_delete">Delete reminder</string>
    <string name="action_set_uncompleted">Set as uncompleted</string>
    <string name="action_set_completed">Set as completed</string>
    <string name="toast_reminder_deleted">Reminder deleted.</string>
    <string name="prompt_reminder_proximity_exit">Trigger when farther than</string>
    <string name="navigation_upgrade_title">Upgrade</string>
    <string name="preference_disable">Temporarily disable Geobells</string>
    <string name="preference_disable_summary">All location polling and reminders will be disabled</string>
    <string name="notification_disabled_title">Geobells is disabled</string>
    <string name="notification_disabled_message">Tap to go to settings.</string>
    <string name="preference_interval">Change polling interval</string>
    <string name="dialog_message_interval">Adjust this by changing the multiplier. A multiplier of 1 means Geobells will check for a new location every 60 seconds, 0.5 is 30 seconds, etc. A higher multiplier is less accurate, but better for battery life.</string>
    <string name="dialog_title_interval">Change polling interval</string>
    <string name="toast_multiplier_length">Please fill out all info.</string>
    <string name="dialog_message_enable_locationservices">To use Geobells, you must enable location services. \n\nPlease enable both GPS and network location.</string>
    <string name="dialog_title_enable_locationservices">Enable location</string>
    <string name="dialog_button_open_location_settings">Open settings</string>
    <string name="dialog_button_nothanks">No thanks</string>
    <string name="dialog_title_google_play_services">Google Play Services</string>
    <string name="dialog_message_update_google">You need to update your version of Google Play services to use Geobells.</string>
    <string name="dialog_message_no_google">You must have Google Play Services to use Geobells.</string>
    <string name="preference_low_power">Enable low power mode</string>
    <string name="preference_low_power_summary">Don\'t use GPS. Battery usage will be dramatically reduced, but so will accuracy</string>
</resources>