<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.patil.geobells.lite.CreateReminderActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/view_map"
            android:layout_width="match_parent"
            android:baselineAlignBottom="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_map"
            android:layout_margin="12dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/text_title_default"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/reminder_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/reminder_title"
            android:layout_below="@id/reminder_title"
            android:fontFamily="sans-serif-light"
            android:text="@string/text_location_default"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/reminder_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_location"
            android:layout_marginTop="24dp"
            android:text="@string/text_description_default"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/reminder_proximity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_description"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/text_proximity_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reminder_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_proximity"
            android:padding="12dp"
            android:text="@string/text_days_default"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/reminder_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_days"
            android:padding="12dp"
            android:text="@string/text_repeat_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reminder_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_repeat"
            android:padding="12dp"
            android:text="@string/text_toggle_default"
            android:textSize="18sp" />


    </RelativeLayout>

</ScrollView>