<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:minHeight="18dp"
            android:src="@drawable/ic_action_place" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.9"
            android:gravity="left"
            android:fontFamily="sans-serif-light"
            android:padding="12dp"
            android:text="@string/text_title_default"
            android:textSize="22sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:fontFamily="sans-serif-light"
        android:padding="12dp"
        android:text="@string/text_location_default"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="12dp"
        android:paddingRight="12dp"
        android:text="@string/text_date_default"
        android:textStyle="italic" />

</LinearLayout>