<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="100"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/view_colorbar"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:baselineAlignBottom="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="97"
            android:layout_height="match_parent">

            <ImageButton
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="8dp"
                android:src="@drawable/ic_action_place" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/text_title_default"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_title"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/text_location_default"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_location"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="12dp"
                android:text="@string/text_date_default"
                android:textStyle="italic" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>